--- a/src/_includes/partials/header.njk
+++ b/src/_includes/partials/header.njk
@@ -1,4 +1,4 @@
-<header class="relative z-40 isolate shadow-border bg-white {% if page.fileSlug === 'forsiden' %}shadow{% endif %}">
+<header class="relative z-40 isolate grid grid-cols-layout shadow-border bg-white {% if page.fileSlug === 'forsiden' %}shadow{% endif %}">
 
   {# <nav id="site-skiplinks" class="absolute flex flex-col items-center p-1" aria-label="Hopp til innhold">
 <a href="#" class="sr-only">Hovedmeny</a>
@@ -6,61 +6,57 @@
 <a href="#maincontent" class="sr-only">Hovedinnhold</a>
 nav> #}
 
-  <div class="relative px-4 md:px-8 isolate">
-    <div class="max-w-screen-xl mx-auto sm:w-[95%]">
-      <nav class="flex items-center w-full gap-4">
+  <nav class="flex items-center w-full gap-4 col-feature">
 
-        {# Logo #}
-        <a href="#" class="text-[#C30000] hover:text-[#DE2E2E] block focus:outline-none focus:ring-2 focus:ring-blue-800 py-2.5 px-2 -mx-2 rounded-sm">
-          {{ '/src/_includes/svg/logo.svg' | svgContents('w-16 h-5') | safe }}
-          <span class="sr-only">NAV</span>
-        </a>
+    {# Logo #}
+    <a href="/maler/forside" class="text-[#C30000] hover:text-[#DE2E2E] block focus:outline-none focus:ring-2 focus:ring-blue-800 py-2.5 px-2 -mx-2 rounded-sm">
+      {{ '/src/_includes/svg/logo.svg' | svgContents('w-16 h-5') | safe }}
+      <span class="sr-only">NAV</span>
+    </a>
 
-        {# Sectors #}
-        <div class="self-stretch hidden px-6 md:grid">
-          <ul class="flex justify-center gap-4 text-lg " role="tablist">
-            <li role="tab" aria-selected="true" class="grid">
-              <a href="#" class="focus:outline-none focus:ring-2 focus:ring-blue-800 flex items-center px-1.5 pb-5 font-semibold text-gray-900 border-b-4 border-blue-500 pt-7">
-            Privat
-          </a>
-            </li>
-            <li role="tab" aria-selected="false" class="grid">
-              <a href="#" class="focus:outline-none opacity-70 focus:ring-2 focus:ring-blue-800 flex items-center px-1.5 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-200">
-            Arbeidsgiver
-          </a>
-            </li>
-            <li role="tab" aria-selected="false" class="grid">
-              <a href="#" class="focus:outline-none opacity-70 focus:ring-2 focus:ring-blue-800 flex items-center px-1.5 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-200">
-            Samarbeidspartner
-          </a>
-            </li>
-          </ul>
-        </div>
-
-        {# Menu Buttons #}
-        <div class="flex items-end gap-2 pt-2 pb-2 ml-auto">
-          <button class="flex flex-wrap items-center justify-center pl-2 pr-3 py-1.5 font-semibold min-w-[8ch] gap-1 text-blue-500 rounded md:px-3 xs:text-lg hover:ring-2 hover:ring-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-800" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'">
-
-            <span class="relative">
-              {{ '/src/_includes/svg/notification.svg' | svgContents('w-7 h-7') | safe }}
-              <span class="absolute top-0.5 block w-2 h-2 bg-red-400 rounded-full -left-1"></span>
-            </span>
-            <span class="mt-px whitespace-nowrap">Varsel</span>
-
-          </button>
-          <button class="flex flex-wrap items-center justify-center px-2 py-1.5 font-semibold text-blue-500 rounded gap-x-2 md:pl-2 md:pr-3 xs:text-lg hover:ring-2 gap-1 hover:ring-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-800" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false" x-bind:class="menuOpen && 'bg-deepblue-50'">
-            <template x-if="!menuOpen">
-              {{ '/src/_includes/svg/menusearch.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
-            </template>
-            <template x-if="menuOpen">
-              {{ '/src/_includes/svg/close.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
-            </template>
-            <span class="mt-px whitespace-nowrap">Meny</span>
-          </button>
-        </div>
-      </nav>
+    {# Sectors #}
+    <div class="self-stretch hidden px-6 md:grid">
+      <ul class="flex justify-center gap-4 text-lg " role="tablist">
+        <li role="tab" aria-selected="true" class="grid">
+          <a href="#" class="focus:outline-none focus:ring-2 focus:ring-blue-800 flex items-center px-1.5 pb-5 font-semibold text-gray-900 border-b-4 border-blue-500 pt-7">
+        Privat
+      </a>
+        </li>
+        <li role="tab" aria-selected="false" class="grid">
+          <a href="#" class="focus:outline-none opacity-70 focus:ring-2 focus:ring-blue-800 flex items-center px-1.5 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-200">
+        Arbeidsgiver
+      </a>
+        </li>
+        <li role="tab" aria-selected="false" class="grid">
+          <a href="#" class="focus:outline-none opacity-70 focus:ring-2 focus:ring-blue-800 flex items-center px-1.5 pb-5 border-b-4 pt-7 border-white/0 hover:border-gray-200">
+        Samarbeidspartner
+      </a>
+        </li>
+      </ul>
     </div>
-  </div>
+
+    {# Menu Buttons #}
+    <div class="flex items-end gap-2 pt-2 pb-2 ml-auto">
+      <button class="flex flex-wrap items-center justify-center pl-2 pr-3 py-1.5 font-semibold min-w-[8ch] gap-1 text-blue-500 rounded md:px-3 xs:text-lg hover:ring-2 hover:ring-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-800" x-on:click="notifyOpen = !notifyOpen, menuOpen = false" x-bind:class="notifyOpen && 'bg-deepblue-50'">
+
+        <span class="relative">
+          {{ '/src/_includes/svg/notification.svg' | svgContents('w-7 h-7') | safe }}
+          <span class="absolute block w-2 h-2 bg-red-400 rounded-full top-1 ring-2 ring-red-100/50 -left-1"></span>
+        </span>
+        <span class="mt-px whitespace-nowrap">Varsel</span>
+
+      </button>
+      <button class="flex flex-wrap items-center justify-center px-2 py-1.5 font-semibold text-blue-500 rounded gap-x-2 md:pl-2 md:pr-3 xs:text-lg hover:ring-2 gap-1 hover:ring-blue-800 focus:outline-none focus:ring-2 focus:ring-blue-800" type="button" x-on:click="menuOpen = !menuOpen, notifyOpen = false" x-bind:class="menuOpen && 'bg-deepblue-50'">
+        <template x-if="!menuOpen">
+          {{ '/src/_includes/svg/menusearch.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+        </template>
+        <template x-if="menuOpen">
+          {{ '/src/_includes/svg/close.svg' | svgContents('w-7 h-7 shrink-0 pointer-events-none') | safe }}
+        </template>
+        <span class="mt-px whitespace-nowrap">Meny</span>
+      </button>
+    </div>
+  </nav>
 </header>
 
 {% include "partials/navigation.njk" %}
