--- a/src/_includes/partials/navigation.njk
+++ b/src/_includes/partials/navigation.njk
@@ -1,8 +1,8 @@
 {# Navigation (Private) #}
 <nav class="relative">
-  <div class="absolute inset-x-0 z-50 px-4 pt-8 pb-16 bg-white shadow-xl md:pt-12 top-full md:px-8" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
+  <div class="absolute inset-x-0 z-50 grid pt-8 pb-16 bg-white shadow-xl grid-cols-layout md:pt-12 top-full" x-bind:class="!menuOpen ? 'hidden' : 'opacity-0 animate-dropdown'">
 
-    <div class="max-w-screen-xl mx-auto sm:w-[95%]">
+    <div class="col-feature">
       <div class="grid gap-3 md:gap-6 md:grid-flow-col-dense">
 
         <div class="grid flex-auto row-start-1 p-4 -mx-2 rounded-lg md:col-start-3 md:row-span-2 bg-deepblue-50 md:p-6 md:-mx-6">
@@ -35,7 +35,7 @@
         </div>
 
         <div class="flex-1 pt-8 md:pr-4 md:col-start-1 md:row-start-1">
-          <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.areas.title }}</h3>
+          <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.areas.title | safe }}</h3>
           <ul class="grid gap-1 mt-2">
             {% for link in menu.areas.linkList %}
               <li class="break-inside-avoid">
@@ -51,7 +51,7 @@
         </div>
 
         <div class="flex flex-col pt-8 md:pr-12 md:col-start-2 md:row-start-1">
-          <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.shortcuts.title }}</h3>
+          <h3 class="text-sm tracking-widest uppercase opacity-70">{{ menu.shortcuts.title | safe }}</h3>
           <ul class="mt-2">
             {% for link in menu.shortcuts.linkList %}
               <li>
