--- a/src/main.css
+++ b/src/main.css
@@ -249,6 +249,12 @@
     --navds-shadow-focus-inverted: 0 0 0 3px
       var(--navds-semantic-color-focus-inverted);
     --navds-shadow-focus: 0 0 0 3px var(--navds-semantic-color-focus);
+
+    --_layout-gap: clamp(1rem, 4vw, 3rem);
+    --_layout-full: minmax(var(--_layout-gap), 1fr);
+    --_layout-feature: minmax(0, 6.75rem);
+    --_layout-popout: minmax(0, 7.125rem);
+    --_layout-content: min(56.25rem, 100% - var(--_layout-gap) * 2);
   }
 
   p > a {
@@ -286,23 +292,3 @@
     margin-block-start: 0.5rem;
   }
 }
-
-/*
-  .fancy-scroll::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-    background-color: #f5f5f5;
-  }
-
-  .fancy-scroll::-webkit-scrollbar {
-    width: 12px;
-    background-color: #f5f5f5;
-  }
-
-  .fancy-scroll::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: #555;
-  }
-
-*/
