--- a/src/maler/kontor/kontor.njk
+++ b/src/maler/kontor/kontor.njk
@@ -17,8 +17,8 @@ bodyClass: 'bg-white'
 
   <main class="min-h-[61vh] text-lg text-gray-800">
 
-    <div class="px-4 pt-8 pb-4 md:px-8">
-      <div class="md:max-w-screen-lg mx-auto sm:w-[95%]">
+    <div class="grid pt-8 pb-4 grid-cols-layout ">
+      <div class="col-content">
         <h1 class="text-3xl font-semibold leading-tight text-gray-900 md:text-4xl">
           NAV Andeby
         </h1>
@@ -32,8 +32,8 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
-    <div class="px-4 pt-4 pb-20 md:pt-6 md:px-8">
-      <div class="md:max-w-screen-lg mx-auto sm:w-[95%]">
+    <div class="grid pt-4 pb-20 grid-cols-layout md:pt-6">
+      <div class="col-content">
         <div class="max-w-prose">
 
           <div class="p-8 bg-orange-50">
@@ -85,8 +85,8 @@ bodyClass: 'bg-white'
       </div>
     </div>
 
-    <div class="px-4 pb-12 bg-gray-100 md:px-8">
-      <div class="md:max-w-screen-lg mx-auto sm:w-[95%]">
+    <div class="grid pb-12 bg-gray-100 grid-cols-layout">
+      <div class="col-content">
         <div class="max-w-prose">
 
           {% for box in boxes %}
@@ -109,7 +109,7 @@ bodyClass: 'bg-white'
       {{ box.icon | svgContents('w-7 h-7 shrink-0') | safe }}
     </div>
     <div class="px-6 py-8 bg-white md:py-12 md:px-10">
-      <h2 class="mt-8 text-2xl font-semibold">{{ box.title }}</h2>
+      <h2 class="mt-8 text-2xl font-semibold">{{ box.title | safe }}</h2>
       <div class="mt-2 markdown">
         {{ box.content | markdown | safe }}
       </div>
