--- a/src/maler/forside.njk
+++ b/src/maler/forside.njk
@@ -1,6 +1,8 @@
 ---
 title: 'Forside'
 description: 'Lenker til de viktigste områdene + utvalgte snarveier.'
+tags:
+  - template
 order: 1
 ---
 {% extends 'base.njk' %}
