--- a/src/maler/produktoversikt/produktoversikt.njk
+++ b/src/maler/produktoversikt/produktoversikt.njk
@@ -1,6 +1,6 @@
 ---
-title: 'Søknad og skjema fra A til Å'
-description: 'Pengestøtter og tjenester fra NAV for privatpersoner'
+title: 'Produkt&shy;oversikt'
+description: ''
 tags:
   - template
 order: 4
@@ -19,9 +19,9 @@ bodyClass: ''
 
   <main class="text-lg text-gray-900 place-self-stretch">
     <div class="grid py-8 bg-white grid-cols-layout md:pt-12 md:pb-16">
-      <div class="relative col-popout">
-        <h1 class="text-5xl font-semibold">{{ title | safe }}</h1>
-        <p class="mt-6 max-w-prose">Pengestøtter og tjenester fra NAV for privatpersoner. Du kan søke eller sortere på tema og type.</p>
+      <div class="relative col-popout sm:mx-auto md:mx-0 sm:max-w-prose md:max-w-none">
+        <h1 class="text-3xl font-semibold leading-tight md:text-5xl md:leading-tight">Søknad og skjema fra A&nbsp;til&nbsp;Å</h1>
+        <p class="mt-3 md:mt-6 max-w-prose">Pengestøtter og tjenester fra NAV for privatpersoner. Du kan søke eller sortere på område og kategori.</p>
         <div class="absolute hidden right-12 bottom-3 md:block">
           {{ '/src/_includes/svg/pictogram-support.svg' | svgContents('w-32 h-32') | safe }}
         </div>
@@ -31,13 +31,13 @@ bodyClass: ''
     {% set chipClasses = "inline-flex cursor-pointer px-4 pt-1.5 pb-1.5 leading-tight text-base bg-white ring-1 ring-gray-200/25 rounded-full hover:bg-orange-100" %}
 
     <div class="grid py-8 bg-gray-100 md:py-16 grid-cols-layout">
-      <div class="grid items-start md:grid-cols-12 col-popout">
+      <div class="grid items-start md:grid-cols-12 col-popout sm:max-w-prose sm:mx-auto md:mx-0 md:max-w-none">
         <aside class="md:col-span-4 md:sticky md:top-8">
           <div class="">
             <h2 class="font-semibold md:text-xl">{{ domain.title | safe }}</h2>
-            <ul class="flex flex-wrap mt-3 gap-x-2 gap-y-3">
+            <ul class="flex flex-wrap items-start mt-3 gap-x-2 gap-y-3">
               {% for item in domain.items %}
-                <li class="">
+                <li>
                   <input type="radio" class="absolute opacity-0 pointer-events-none peer/domain" name="productDomain" value="{{ item }}" id="productDomain-{{ item | lower }}" {{ 'checked' if loop.first }} />
                   <label class="{{ chipClasses }} peer-checked/domain:bg-blue-600 peer-checked/domain:text-white" for="productDomain-{{ item | lower }}">{{ item }}</label>
                 </li>
@@ -47,7 +47,7 @@ bodyClass: ''
 
           <div class="mt-12">
             <h2 class="font-semibold md:text-xl">{{ category.title | safe }}</h2>
-            <ul class="flex flex-wrap items-center mt-3 gap-x-2 gap-y-3">
+            <ul class="flex flex-wrap items-start mt-3 gap-x-2 gap-y-3">
               {% for item in category.items %}
                 <li>
                   <input type="radio" class="absolute opacity-0 pointer-events-none peer/category" name="productType" value="{{ item }}" id="productType-{{ item | lower }}" {{ 'checked' if loop.first }} />
@@ -70,31 +70,29 @@ bodyClass: ''
           </div>
 
           <div class="grid mt-6 bg-white divide-y divide-gray-200 rounded-lg shadow">
-            {% for product in collections.productEntry %}
-              <div x-data="{ expanded: {{ product.data.expanded or 'false' }} }" class="focus-within:z-10">
+            {% for product in productEntries %}
+              <div x-data="{ expanded: {{ product.expanded or 'false' }} }" class="focus-within:z-10">
                 <button x-on:click="expanded = !expanded" class="flex items-center w-full gap-4 px-4 py-4 text-xl font-semibold text-left hover:bg-gray-50/50 group focus:outline-none focus-visible:ring focus-visible:ring-gray-600 focus-visible:rounded" x-bind:aria-expanded="expanded">
-                  {% if product.data.icon %}
-                    {{ product.data.icon | svgContents('w-12 h-12') | safe }}
+                  {% if product.icon %}
+                    {{ product.icon | svgContents('w-12 h-12') | safe }}
                   {% else %}
-                  <span class="flex-none block w-12 h-12 my-2 rounded-full bg-green-200/25"></span>
+                  <span class="flex-none block w-12 h-12 rounded-full bg-green-200/25"></span>
                   {% endif %}
-                  <span class="flex-1 leading-tight">{{ product.data.title | safe }}</span>
+                  <span class="flex-1 leading-tight">{{ product.title | safe }}</span>
                   {{ '/src/_includes/svg/chevron-down.svg' | svgContents('mt-1 mr-1 w-5 h-5 opacity-60 group-aria-expanded:rotate-180 transition duration-100') | safe }}
                 </button>
                 <div class="relative px-4 pt-2 pb-12" x-bind:hidden="!expanded">
-                  {% if product.templateContent %}
-                    <div class="pt-4 xs:px-14 markdown">
-                      {{ product.templateContent | markdown | safe }}
-                    </div>
-                  {% endif %}
+                  <div class="pt-4 xs:px-14 markdown">
+                    {% include "partials/contentBlocks.njk" %}
+                  </div>
                   <div class="pt-6 text-center px-14">
-                    <a class="text-sm text-blue-500 hover:underline hover:text-blue-600" href="{{ product.url }}">(Vis som egen side)</a>
+                    <a class="text-sm text-blue-500 hover:underline hover:text-blue-600" href="/maler/produktoversikt/{{ product.title | slug }}.html">(Vis som egen side)</a>
                   </div>
                 </div>
               </div>
             {% endfor %}
 
-            {% for i in range(7,197) %}
+            {# {% for i in range(7,197) %}
               <div x-data="{ expanded: false }" class="isolate focus-within:z-10">
                 <button x-on:click="expanded = !expanded" class="flex items-center w-full gap-4 px-4 py-4 text-xl font-semibold text-left focus:outline-none hover:bg-gray-50/50 focus-visible:ring focus-visible:ring-gray-600 focus-visible:rounded " x-bind:aria-expanded="true">
                   {{ "/src/_includes/svg/pictogram-neutral.svg" | svgContents('w-12 h-12') | safe }}
@@ -107,14 +105,13 @@ bodyClass: ''
                   </div>
                 </div>
               </div>
-            {% endfor %}
+            {% endfor %} #}
           </div>
 
         </div>
       </div>
     </div>
-  </div>
-</main>
+  </main>
 
 {% include "partials/footer.njk" %}
 
